# witserve

./: install.md  loadtest.bash  test_small.json
c-lib/: example.c  example.h  host.wit  my-component.c  my-core.wasm
composed/: Cargo.toml  c.bash  composed.wasm
composed/src/: main.rs
fib/: Cargo.toml  c.bash
fib/src/: bindings.rs  lib.rs
fib/wit/: second.wit
proxy/: Cargo.toml
proxy/src/: bindings.rs  lib.rs
proxy/wit/: world.wit
wit-client/: Cargo.toml  world.wit
wit-client/src/: main.rs  req.rs  resp.rs  wasm-main.rs
wit-server/: Cargo.toml  c.bash  my-component.wasm
wit-server/src/: lib.rs  mod1.rs  mod2.rs
wit-server/wit/: host.wit
wit-server2/: Cargo.toml  c.bash  fib.wasm  install.bash  my-component.wasm
wit-server2/src/: lib.rs  mod1.rs  mod2.rs
wit-server2/wit/: host.wit  proxy.wit
