[package]
name = "fib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.17.0", default-features = false, features = ["realloc"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "user:fib"

[package.metadata.component.target]
path = "wit/second.wit"
world = "fib"

[package.metadata.component.target.dependencies]
"component:proxy" = { path = "../proxy/wit" }
"example:fib" = {path = "../wit-client"}