[package]
name = "wit-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime ={features= ['component-model'], version = "12.0.2"}
tokio = { version = "1", features = ["full"] }
warp = "0.3"
mini-redis = "0.4"
anyhow = "1.0.75"
maplit = "1.0.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
json = "0.12.4"
serde_json = { version = "1.0.108", features = [] }
serde = { version = "1.0.192", features = ["derive"] }
serde_derive = "1.0.192"
