[package]
name = "wit-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.12.0" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component.target.dependencies]
"request:proxy" = {path = "wit"}

